--- a/forma1.html
+++ b/forma1.html
@@ -40,7 +40,7 @@ dato.addEventListener('click',envio)
         myFormData.append('valA', valA.value);
         myFormData.append('valB', valB.value);
 
-        fetch('php/forma1.php', {
+        fetch('PHP/forma1.php', {
             method: "POST", 
             body: myFormData
         })
